# pyLimma

./: LICENSE  README.md  pyproject.toml
src/: limmaDEGs.py  pyLimmaDEGs.py
